Gemma/src/com/gemma/web/ftl/FtlParser.java
// Generated from Ftl.g4 by ANTLR 4.5.2

package com.gemma.web.ftl;
import com.gemma.web.ftl_helper.Transaction;
import com.gemma.web.ftl_helper.Variable;
import com.gemma.web.ftl_helper.ObjectMath;
import java.util.List;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FtlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, Bind=6, Credit=7, Debit=8, Ledger=9, 
		GetAmount=10, GetTax=11, GetDescription=12, BOOLEAN=13, CHAR=14, CONTINUE=15, 
		DO=16, DOUBLE=17, ELSE=18, ENUM=19, FLOAT=20, STRING=21, FOR=22, IF=23, 
		INT=24, LONG=25, WHILE=26, IntegerLiteral=27, FloatOrDoubleLiteral=28, 
		FloatingPointLiteral=29, BooleanLiteral=30, CharacterLiteral=31, StringLiteral=32, 
		NullLiteral=33, LPAREN=34, RPAREN=35, LBRACE=36, RBRACE=37, LBRACK=38, 
		RBRACK=39, SEMI=40, COMMA=41, DOT=42, ASSIGN=43, GT=44, LT=45, BANG=46, 
		TILDE=47, QUESTION=48, COLON=49, EQUAL=50, LE=51, GE=52, NOTEQUAL=53, 
		AND=54, OR=55, INC=56, DEC=57, ADD=58, SUB=59, MUL=60, DIV=61, BITAND=62, 
		BITOR=63, CARET=64, MOD=65, ADD_ASSIGN=66, SUB_ASSIGN=67, MUL_ASSIGN=68, 
		DIV_ASSIGN=69, AND_ASSIGN=70, OR_ASSIGN=71, XOR_ASSIGN=72, MOD_ASSIGN=73, 
		LSHIFT_ASSIGN=74, RSHIFT_ASSIGN=75, URSHIFT_ASSIGN=76, Identifier=77, 
		AT=78, WS=79, COMMENT=80, LINE_COMMENT=81;
	public static final int
		RULE_transaction = 0, RULE_beginStatement = 1, RULE_endStatement = 2, 
		RULE_statement = 3, RULE_expression = 4, RULE_amount = 5, RULE_description = 6, 
		RULE_account = 7, RULE_lValue = 8, RULE_rValue = 9, RULE_rVal = 10, RULE_lVal = 11, 
		RULE_operand = 12, RULE_mathOperand = 13, RULE_bitWiseOperand = 14, RULE_decarationStatement = 15, 
		RULE_type = 16, RULE_variable = 17, RULE_literal = 18, RULE_keywordAssignment = 19, 
		RULE_keyword = 20, RULE_ledgerType = 21;
	public static final String[] ruleNames = {
		"transaction", "beginStatement", "endStatement", "statement", "expression", 
		"amount", "description", "account", "lValue", "rValue", "rVal", "lVal", 
		"operand", "mathOperand", "bitWiseOperand", "decarationStatement", "type", 
		"variable", "literal", "keywordAssignment", "keyword", "ledgerType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'begin'", "'end'", "'**'", "'C'", "'D'", "'bind'", "'credit'", 
		"'debit'", "'ledger'", "'getAmount'", "'getTax'", "'getDescription'", 
		"'boolean'", "'char'", "'continue'", "'do'", "'double'", "'else'", "'enum'", 
		"'float'", "'string'", "'for'", "'if'", "'int'", "'long'", "'while'", 
		null, null, null, null, null, null, "'null'", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", 
		"'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
		"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", 
		"'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
		"'>>>='", null, "'@'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "Bind", "Credit", "Debit", "Ledger", 
		"GetAmount", "GetTax", "GetDescription", "BOOLEAN", "CHAR", "CONTINUE", 
		"DO", "DOUBLE", "ELSE", "ENUM", "FLOAT", "STRING", "FOR", "IF", "INT", 
		"LONG", "WHILE", "IntegerLiteral", "FloatOrDoubleLiteral", "FloatingPointLiteral", 
		"BooleanLiteral", "CharacterLiteral", "StringLiteral", "NullLiteral", 
		"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
		"DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", 
		"LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", 
		"DIV", "BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
		"MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", 
		"LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "Identifier", "AT", 
		"WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ftl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		public Transaction trans;
		public ObjectMath om = new ObjectMath();

	public FtlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TransactionContext extends ParserRuleContext {
		public Transaction trans;
		public BeginStatementContext beginStatement() {
			return getRuleContext(BeginStatementContext.class,0);
		}
		public EndStatementContext endStatement() {
			return getRuleContext(EndStatementContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TransactionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TransactionContext(ParserRuleContext parent, int invokingState, Transaction trans) {
			super(parent, invokingState);
			this.trans = trans;
		}
		@Override public int getRuleIndex() { return RULE_transaction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterTransaction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitTransaction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitTransaction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransactionContext transaction(Transaction trans) throws RecognitionException {
		TransactionContext _localctx = new TransactionContext(_ctx, getState(), trans);
		enterRule(_localctx, 0, RULE_transaction);
		this.trans = _localctx.trans;
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			beginStatement();
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45);
				statement();
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Credit) | (1L << Debit) | (1L << Ledger) | (1L << BOOLEAN) | (1L << DOUBLE) | (1L << STRING) | (1L << LONG))) != 0) || _la==Identifier );
			setState(50);
			endStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginStatementContext extends ParserRuleContext {
		public BeginStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterBeginStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitBeginStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitBeginStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginStatementContext beginStatement() throws RecognitionException {
		BeginStatementContext _localctx = new BeginStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_beginStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndStatementContext extends ParserRuleContext {
		public EndStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterEndStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitEndStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitEndStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndStatementContext endStatement() throws RecognitionException {
		EndStatementContext _localctx = new EndStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_endStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__1);

					System.out.println("\n");
					System.out.println("******************* VARIABLES *************************");
					List<Variable> varList = trans.getVarList();
					for (Variable var: varList) {
						System.out.printf("%s %s = %s\n", var.getType(), var.getName(), var.getValue());
					}
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DecarationStatementContext decarationStatement() {
			return getRuleContext(DecarationStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public KeywordContext keyword() {
			return getRuleContext(KeywordContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(66);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case DOUBLE:
			case STRING:
			case LONG:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				decarationStatement();
				setState(58);
				match(SEMI);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				expression();
				setState(61);
				match(SEMI);
				}
				break;
			case Credit:
			case Debit:
			case Ledger:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				keyword();
				setState(64);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String name;
		public Object obj;
		public LValueContext lValue;
		public RValueContext rValue;
		public LValueContext lValue() {
			return getRuleContext(LValueContext.class,0);
		}
		public RValueContext rValue() {
			return getRuleContext(RValueContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((ExpressionContext)_localctx).lValue = lValue();
			setState(69);
			match(ASSIGN);
			setState(70);
			((ExpressionContext)_localctx).rValue = rValue();

					((ExpressionContext)_localctx).name =  (((ExpressionContext)_localctx).lValue!=null?_input.getText(((ExpressionContext)_localctx).lValue.start,((ExpressionContext)_localctx).lValue.stop):null);
					((ExpressionContext)_localctx).obj =  ((ExpressionContext)_localctx).rValue.obj;
					trans.assignVariable(_localctx.name, _localctx.obj);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmountContext extends ParserRuleContext {
		public Double amt;
		public LiteralContext literal;
		public VariableContext variable;
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public AmountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_amount; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterAmount(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitAmount(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitAmount(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AmountContext amount() throws RecognitionException {
		AmountContext _localctx = new AmountContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_amount);
		try {
			setState(79);
			switch (_input.LA(1)) {
			case IntegerLiteral:
			case FloatOrDoubleLiteral:
			case BooleanLiteral:
			case StringLiteral:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				((AmountContext)_localctx).literal = literal();

						((AmountContext)_localctx).amt =  (Double) ((AmountContext)_localctx).literal.obj;
					
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				((AmountContext)_localctx).variable = variable();

						((AmountContext)_localctx).amt =  (Double) trans.getValue((((AmountContext)_localctx).variable!=null?_input.getText(((AmountContext)_localctx).variable.start,((AmountContext)_localctx).variable.stop):null));
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public String desc;
		public LiteralContext literal;
		public VariableContext variable;
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_description);
		try {
			setState(87);
			switch (_input.LA(1)) {
			case IntegerLiteral:
			case FloatOrDoubleLiteral:
			case BooleanLiteral:
			case StringLiteral:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				((DescriptionContext)_localctx).literal = literal();

						((DescriptionContext)_localctx).desc =  (String) ((DescriptionContext)_localctx).literal.obj;
					
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				((DescriptionContext)_localctx).variable = variable();

						((DescriptionContext)_localctx).desc =  (String) trans.getValue((((DescriptionContext)_localctx).variable!=null?_input.getText(((DescriptionContext)_localctx).variable.start,((DescriptionContext)_localctx).variable.stop):null));
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AccountContext extends ParserRuleContext {
		public String acc;
		public LiteralContext literal;
		public VariableContext variable;
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public AccountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_account; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).enterAccount(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FtlListener ) ((FtlListener)listener).exitAccount(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FtlVisitor ) return ((FtlVisitor<? extends T>)visitor).visitAccount(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AccountContext account() throws RecognitionException {
		AccountContext _localctx = new AccountContext(_ctx, getState());
